[tool.poetry]
name = "python-starter-project"
version = "0.1.0"
description = "Start python project"
authors = ["zhilin.ye"]
license = "Apache 2.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
aiohttp = "^3.10.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
